# briarthorn

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.zig  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/steamos/: Dockerfile  README.md  devcontainer.json
.github/actions/docker-image/: action.yml
.github/docker-image/: action.yml
.github/get-vcpkg/: action.yml
.github/workflows/: android.yml  coverage.yml  emcc.yml  linux.yml  macos.yml  osx.yml  steamos.yml  web.yml  windows.yml  zig.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
app/hello-triangle/: CMakeLists.txt  main.cpp
cmake/: qt-vcpkg-fixup.cmake
cmake/compiler/: emcc.json  zig++.sh  zig-windows.json  zig.json  zigar.bat  zigar.sh  zigcc.sh  zigranlib.sh
cmake/platform/: linux.json  windows.json
cmake/preset/compiler/: zig-linux.json  zig-windows.json
cmake/preset/config/: coverage.json  sharedlib.json
cmake/preset/host/: x64-windows.json
cmake/preset/platform/: android.json  linux.json  macos.json  web.json  windows.json
cmake/toolchain/: zig-linux.cmake  zig-mingw.cmake  zig-osx.cmake
cmake/triplets/: arm64-linux-zig.cmake  arm64-osx-zig.cmake  arm64-osx.cmake  x64-linux-zig.cmake  x64-linux.cmake  x64-mingw-static.cmake  x64-osx-zig.cmake  x64-windows-static-md.cmake
cmake/vcpkg/ports/raylib/: portfile.cmake  vcpkg.json
scripts/: bootstrap-emsdk.bat  bootstrap-emsdk.sh  zigranlib.bat
src/: Briarthorn.cpp  Briarthorn.hpp  CMakeLists.txt  briarthorn.rc  build.zig  main.cpp
src/briarthorn/: CMakeLists.txt  Game.cpp  Game.hpp  build.zig
src/briarthorn/test/: .clang-tidy  CMakeLists.txt  Game.test.cpp  build.zig
src/game/: Briarthorn.cpp  Briarthorn.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Command.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Controls.hpp  Duration.cpp  Duration.hpp  Entity.cpp  Entity.hpp  Geo.cpp  Geo.hpp  Graphics.hpp  Heading.hpp  Limits.hpp  System.hpp  Vec2.cpp  Vec2.hpp  World.cpp  World.hpp  build.zig
src/game/systems/: Movement.cpp  Movement.hpp
src/game/test/: CMakeLists.txt  Clock.test.cpp  CommandBuffer.test.cpp  Duration.test.cpp  Entity.test.cpp  Game.test.cpp  Geo.test.cpp  Heading.test.cpp  Movement.test.cpp  Sim.test.cpp  World.test.cpp  build.zig
src/quick/: Application.cpp  Application.hpp  CMakeLists.txt  GameController.cpp  GameController.hpp  WorldView.cpp  WorldView.hpp
src/quick/qml/: Main.qml
src/raylib/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp  build.zig
web/: shell.html
zig/: Ctx.zig  android.zig  config.zig  emscripten.zig  target.zig  util.zig  vcpkg.zig
